--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link href="https://fonts.googleapis.com/css2?family=Mokoto&display=swap" rel="stylesheet">
-  <script type="module" src="./scripts/main.js" defer></script>
-  <link rel="stylesheet" href="./styles/style.css">
+  <script type="module" src="./assets/scripts/main.js" defer></script>
+  <link rel="stylesheet" href="./assets/styles/style.css">
   <title>To-do List</title>
 </head>
 
